--- a/index.html
+++ b/index.html
@@ -21,12 +21,61 @@
             </ul>
         </nav>
     </header>
+
     <main>
-        <section id="home">
-            <h1>Welcome to Boston Tix</h1>
-            <p>Your platform for local event tickets.</p>
+        <!-- Hero Section -->
+        <section id="home" class="hero">
+            <h1>Discover Local Events in Boston</h1>
+            <p>Buy and sell tickets for concerts, art shows, community theater, and more.</p>
+            <button class="cta-button">Browse Events</button>
+        </section>
+
+        <!-- Features Section -->
+        <section id="features" class="features">
+            <div class="feature-card">
+                <img src="assets/secure.svg" alt="Secure Transactions">
+                <h2>Secure Transactions</h2>
+                <p>Buy and sell tickets with confidence using our secure payment gateway.</p>
+            </div>
+            <div class="feature-card">
+                <img src="assets/community.svg" alt="Community Focus">
+                <h2>Community Focus</h2>
+                <p>Support local artists and events while connecting with fellow enthusiasts.</p>
+            </div>
+            <div class="feature-card">
+                <img src="assets/discover.svg" alt="Event Discovery">
+                <h2>Event Discovery</h2>
+                <p>Easily find events by location, date, or category using our intuitive filters.</p>
+            </div>
+        </section>
+
+        <!-- Browse Section -->
+        <section id="browse" class="browse">
+            <h2>Upcoming Events</h2>
+            <div class="event-list">
+                <div class="event-card">
+                    <h3>Art Night at the Gallery</h3>
+                    <p>Experience the best of Boston's local art scene.</p>
+                    <button>Get Tickets</button>
+                </div>
+                <div class="event-card">
+                    <h3>Community Theater Show</h3>
+                    <p>Watch a classic play performed by talented locals.</p>
+                    <button>Get Tickets</button>
+                </div>
+                <div class="event-card">
+                    <h3>Indie Concert</h3>
+                    <p>Enjoy live music from Boston's upcoming artists.</p>
+                    <button>Get Tickets</button>
+                </div>
+            </div>
         </section>
     </main>
+
+    <footer>
+        <p>© 2024 Boston Tix | Connecting People to Local Experiences</p>
+    </footer>
+
     <script src="js/script.js"></script>
 </body>
 </html>
