--- a/index.html
+++ b/index.html
@@ -7,75 +7,63 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
+    <header class="hero">
         <nav class="navbar">
             <div class="logo">Boston Tix</div>
-            <button class="hamburger" aria-label="Toggle navigation">
-                ☰
-            </button>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
-                <li><a href="#browse">Browse</a></li>
+                <li><a href="#browse">Browse Events</a></li>
                 <li><a href="#sell">Sell Tickets</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="#about">About Us</a></li>
             </ul>
         </nav>
+        <div class="hero-content">
+            <h1>Boston Tix</h1>
+            <p>Connecting you to local events and experiences.</p>
+            <button class="cta-button">Discover Events</button>
+        </div>
     </header>
 
     <main>
-        <!-- Hero Section -->
-        <section id="home" class="hero">
-            <h1>Discover Local Events in Boston</h1>
-            <p>Buy and sell tickets for concerts, art shows, community theater, and more.</p>
-            <button class="cta-button">Browse Events</button>
-        </section>
-
-        <!-- Features Section -->
         <section id="features" class="features">
             <div class="feature-card">
-                <img src="assets/secure.svg" alt="Secure Transactions">
                 <h2>Secure Transactions</h2>
-                <p>Buy and sell tickets with confidence using our secure payment gateway.</p>
+                <p>Buy and sell tickets with confidence.</p>
             </div>
             <div class="feature-card">
-                <img src="assets/community.svg" alt="Community Focus">
-                <h2>Community Focus</h2>
-                <p>Support local artists and events while connecting with fellow enthusiasts.</p>
+                <h2>Community Connection</h2>
+                <p>Support local artists and events.</p>
             </div>
             <div class="feature-card">
-                <img src="assets/discover.svg" alt="Event Discovery">
                 <h2>Event Discovery</h2>
-                <p>Easily find events by location, date, or category using our intuitive filters.</p>
+                <p>Find events tailored to your interests.</p>
             </div>
         </section>
 
-        <!-- Browse Section -->
-        <section id="browse" class="browse">
-            <h2>Upcoming Events</h2>
+        <section id="events" class="events">
+            <h2>Featured Events</h2>
             <div class="event-list">
                 <div class="event-card">
-                    <h3>Art Night at the Gallery</h3>
-                    <p>Experience the best of Boston's local art scene.</p>
-                    <button>Get Tickets</button>
+                    <h3>Jazz Night</h3>
+                    <p>Experience Boston's top jazz performers.</p>
+                    <button class="event-button">Buy Tickets</button>
                 </div>
                 <div class="event-card">
-                    <h3>Community Theater Show</h3>
-                    <p>Watch a classic play performed by talented locals.</p>
-                    <button>Get Tickets</button>
+                    <h3>Art Exhibition</h3>
+                    <p>A showcase of Boston's vibrant art scene.</p>
+                    <button class="event-button">Buy Tickets</button>
                 </div>
                 <div class="event-card">
-                    <h3>Indie Concert</h3>
-                    <p>Enjoy live music from Boston's upcoming artists.</p>
-                    <button>Get Tickets</button>
+                    <h3>Local Theater</h3>
+                    <p>See the latest productions from local artists.</p>
+                    <button class="event-button">Buy Tickets</button>
                 </div>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>© 2024 Boston Tix | Connecting People to Local Experiences</p>
+        <p>© 2024 Boston Tix. All rights reserved.</p>
     </footer>
-
-    <script src="js/script.js"></script>
 </body>
 </html>
