--- a/index.html
+++ b/index.html
@@ -135,16 +135,33 @@
         <!-- Footer Section -->
         <footer class="footer">
             <div class="footer-content">
-            <!-- Footer Navigation Links -->
+                <!-- Social Media Links -->
+                <div class="footer-social">
+                    <a href="https://www.facebook.com" target="_blank" class="social-link">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="https://www.twitter.com" target="_blank" class="social-link">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="https://www.instagram.com" target="_blank" class="social-link">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://www.linkedin.com" target="_blank" class="social-link">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                </div>
+                
+                <!-- Footer Navigation Links -->
                 <div class="footer-nav">
                     <a href="aboutus.html">About Us</a>
-                    <a href="events.html">Events</a>
                     <a href="contact.html">Contact</a>
+                    <a href="privacy.html">Privacy Policy</a>
+                    <a href="terms.html">Terms of Service</a>
                 </div>
-
-                <!-- Copyright Info -->
+                
+                <!-- Footer Copyright -->
                 <div class="footer-copy">
-                    <p>&copy; 2024 FitLife.</p>
+                    <p>&copy; 2024 Boston Tix. All Rights Reserved.</p>
                 </div>
             </div>
         </footer>
