--- a/aboutus.html
+++ b/aboutus.html
@@ -84,18 +84,23 @@
             <div class="team-members">
                 <div class="team-member">
                     <img src="team1.jpg" alt="Team Member 1">
-                    <h3>Alex Smith</h3>
+                    <h3>Marielle Cibella</h3>
                     <p>Founder & CEO</p>
                 </div>
                 <div class="team-member">
                     <img src="team2.jpg" alt="Team Member 2">
-                    <h3>Jamie Lee</h3>
+                    <h3>Fouad Sayegh</h3>
                     <p>Head of Marketing</p>
                 </div>
                 <div class="team-member">
                     <img src="team3.jpg" alt="Team Member 3">
-                    <h3>Jordan Davis</h3>
+                    <h3>Ela Abay</h3>
                     <p>Lead Developer</p>
+                </div>
+                <div class="team-member">
+                    <img src="team3.jpg" alt="Team Member 3">
+                    <h3>Jenni Lu</h3>
+                    <p>Event Coordinator</p>
                 </div>
             </div>
         </div>
