--- a/index.html
+++ b/index.html
@@ -14,25 +14,6 @@
 <body>
     <!-- Header Section -->
     <div id="header-container"></div>
-    <!-- JavaScript to Fetch Header -->
-    <script>
-        // Wait for the DOM to be fully loaded
-        document.addEventListener("DOMContentLoaded", () => {
-            // Fetch the header.html file
-            fetch('header.html')
-                .then(response => {
-                    if (!response.ok) throw new Error('Failed to fetch header.html');
-                    return response.text(); // Parse response as text
-                })
-                .then(data => {
-                    // Insert the content into the placeholder
-                    document.getElementById('header-container').innerHTML = data;
-                })
-                .catch(error => {
-                    console.error('Error loading header:', error);
-                });
-        });
-    </script>
 
     <!-- Banner Section -->
     <section class="banner">
@@ -131,40 +112,21 @@
                 });
             });
         </script>
+        <!-- Footer -->
+        <div id="footer-container"></div>
 
-        <!-- Footer Section -->
-        <footer class="footer">
-            <div class="footer-content">
-                <!-- Social Media Links -->
-                <div class="footer-social">
-                    <a href="https://www.facebook.com" target="_blank" class="social-link">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                    <a href="https://www.twitter.com" target="_blank" class="social-link">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                    <a href="https://www.instagram.com" target="_blank" class="social-link">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                    <a href="https://www.linkedin.com" target="_blank" class="social-link">
-                        <i class="fab fa-linkedin-in"></i>
-                    </a>
-                </div>
-                
-                <!-- Footer Navigation Links -->
-                <div class="footer-nav">
-                    <a href="aboutus.html">About Us</a>
-                    <a href="contact.html">Contact</a>
-                    <a href="privacy.html">Privacy Policy</a>
-                    <a href="terms.html">Terms of Service</a>
-                </div>
-                
-                <!-- Footer Copyright -->
-                <div class="footer-copy">
-                    <p>&copy; 2024 Boston Tix. All Rights Reserved.</p>
-                </div>
-            </div>
-        </footer>
+        <!-- JavaScript to Include Header and Footer -->
+        <script>
+            document.addEventListener("DOMContentLoaded", () => {
+                fetch('header.html')
+                    .then(response => response.text())
+                    .then(data => document.getElementById('header-container').innerHTML = data);
+
+                fetch('footer.html')
+                    .then(response => response.text())
+                    .then(data => document.getElementById('footer-container').innerHTML = data);
+            });
+        </script>
     </main>
 </body>
 </html>
