--- a/aboutus.html
+++ b/aboutus.html
@@ -13,7 +13,7 @@
     <style>
         /* Call-to-Action Section */
         .cta {
-            background-color: #5D3FD3;
+            background-color: #917CED;
             color: #FFFFFF;
             padding: 50px 20px;
             text-align: center;
