--- a/aboutus.html
+++ b/aboutus.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Boston Tix</title>
+    <title>About Us</title>
 
     <!-- Link to External CSS -->
     <link rel="stylesheet" href="style.css" />
