--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
             <div class="contact-details">
                 <div class="contact-info">
                     <h3>Get in Touch</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> 123 Boston Tix Lane, Boston, MA 02115</p>
+                    <p><i class="fas fa-map-marker-alt"></i> 177 College Ave, Medford, MA 02155</p>
                     <p><i class="fas fa-phone-alt"></i> (123) 456-7890</p>
                     <p><i class="fas fa-envelope"></i> support@bostontix.com</p>
                 </div>
@@ -46,7 +46,7 @@
     <section class="map">
         <h3>Find Us Here</h3>
         <iframe 
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2948.4441922117436!2d-71.0941604845399!3d42.336860479187!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e379f6b62b6c99%3A0x35d8d69a24c99388!2sFenway%20Park!5e0!3m2!1sen!2sus!4v1638117841733!5m2!1sen!2sus" 
+            src="https://maps.app.goo.gl/qvznBQ3xXc7FV8YbA" 
             width="100%" 
             height="400" 
             style="border:0;" 
