--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
     <section class="map">
         <h3>Find Us Here</h3>
         <iframe 
-            src="https://maps.app.goo.gl/qvznBQ3xXc7FV8YbA" 
+            src= "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3909.34887985417!2d-71.12273038361832!3d42.408713997913516!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e377d8f45d5581%3A0x842458ae8b385a0f!2sJoyce%20Cummings%20Center!5e0!3m2!1sen!2sus!4v1733157550406!5m2!1sen!2sus" 
             width="100%" 
             height="400" 
             style="border:0;" 
