--- a/header.html
+++ b/header.html
@@ -5,8 +5,8 @@
             <img src="goodusa.webp" alt="American Flag" class="flag-icon">
         </div>
         <div class="top-nav-links">
-            <a href="#">Sign In/Register</a>
-            <a href="#">Support</a>
+            <a href="signin.html">Sign In/Register</a>
+            <a href="contact.html">Support</a>
         </div>
     </section>
 </header>
@@ -19,14 +19,7 @@
             <img src="logo.png" alt="Boston Tix" class="logo">
         </a>
     </h1>
-    
-    <form class="search-form" action="search.html" method="get">
-        <input type="text" name="query" placeholder="Search..." class="search-input">
-        <button type="submit" class="search-button">
-            <i class="fas fa-search"></i>
-        </button>
-    </form>
-    
+
     <!-- Navigation Bar -->
     <nav class="main-nav">
         <a href="aboutus.html">About Us</a>
