--- a/signin.html
+++ b/signin.html
@@ -23,7 +23,7 @@
                 <!-- Sign In Form -->
                 <div class="sign-in-form">
                     <h2>Sign In</h2>
-                    <form action="signin_submit.php" method="post">
+                    <form id="signin-form">
                         <input type="email" name="email" placeholder="Email" required>
                         <input type="password" name="password" placeholder="Password" required>
                         <button type="submit" class="auth-button">Sign In</button>
@@ -38,13 +38,13 @@
                 <!-- Sign Up Form -->
                 <div class="sign-up-form">
                     <h2>Sign Up</h2>
-                    <form action="signup_submit.php" method="post">
+                    <form id="signup-form">
                         <input type="text" name="name" placeholder="Full Name" required>
                         <input type="email" name="email" placeholder="Email" required>
                         <input type="password" name="password" placeholder="Password" required>
-                        <input type="text" name="credit-card" placeholder="Credit Card Number" required>
-                        <input type="text" name="expiry-date" placeholder="Expiration Date (MM/YY)" required>
-                        <input type="text" name="cvv" placeholder="CVV" required>
+                        <input type="text" name="credit-card" placeholder="Credit Card Number" pattern="\d{16}" title="Enter a valid 16-digit credit card number" required>
+                        <input type="text" name="expiry-date" placeholder="Expiration Date (MM/YY)" pattern="(0[1-9]|1[0-2])\/\d{2}" title="Enter a valid expiration date in MM/YY format" required>
+                        <input type="text" name="cvv" placeholder="CVV" pattern="\d{3}" title="Enter a valid 3-digit CVV code" required>
                         <button type="submit" class="auth-button">Sign Up</button>
                     </form>
                 </div>
@@ -52,12 +52,19 @@
         </div>
     </section>
 
+    <!-- Success Popup -->
+    <div id="success-popup" class="hidden">
+        <p>Your account has been created successfully!</p>
+        <button id="close-popup">Close</button>
+    </div>
+
     <!-- Footer -->
     <div id="footer-container"></div>
 
     <!-- JavaScript to Include Header and Footer -->
     <script>
         document.addEventListener("DOMContentLoaded", () => {
+            // Load header and footer
             fetch('header.html')
                 .then(response => response.text())
                 .then(data => document.getElementById('header-container').innerHTML = data);
@@ -65,6 +72,22 @@
             fetch('footer.html')
                 .then(response => response.text())
                 .then(data => document.getElementById('footer-container').innerHTML = data);
+
+            // Form validations and popup functionality
+            const signupForm = document.getElementById("signup-form");
+            const successPopup = document.getElementById("success-popup");
+            const closePopup = document.getElementById("close-popup");
+
+            signupForm.addEventListener("submit", (event) => {
+                event.preventDefault(); // Prevent actual form submission
+
+                // Show success popup
+                successPopup.classList.remove("hidden");
+            });
+
+            closePopup.addEventListener("click", () => {
+                successPopup.classList.add("hidden"); // Close the popup
+            });
         });
     </script>
 </body>
