--- a/header.html
+++ b/header.html
@@ -21,11 +21,10 @@
         width: 25px;
         background-color: #FFFFFF;
         border-radius: 2px;
-        transition: transform 0.3s ease, opacity 0.3s ease;
     }
 
     .hamburger-dropdown {
-        display: none; /* Initially hidden */
+        display: none; 
         position: absolute;
         top: 100%;
         right: 0;
@@ -50,17 +49,17 @@
     /* Media Query for Hamburger */
     @media (max-width: 1085px) {
         .main-nav {
-            display: none; /* Hide main navigation */
+            display: none; 
         }
 
         .hamburger-menu {
-            display: block; /* Show hamburger menu */
+            display: block; 
         }
     }
 
     /* Open Hamburger Menu */
     .hamburger-dropdown.open {
-        display: block; /* Show the dropdown menu when open */
+        display: block; 
     }
 </style>
 
@@ -89,7 +88,7 @@
     <!-- Navigation Bar -->
     <nav class="main-nav">
         <a href="aboutus.html">About Us</a>
-        <a href="events.html">Events</a>
+        <a href="ticketevents.html">Events</a>
         <a href="contact.html">Contact</a>
     </nav>
 
@@ -102,7 +101,7 @@
         </div>
         <div class="hamburger-dropdown">
             <a href="aboutus.html">About Us</a>
-            <a href="events.html">Events</a>
+            <a href="ticketevents.html">Events</a>
             <a href="contact.html">Contact</a>
         </div>
     </div>
