--- a/aboutus.html
+++ b/aboutus.html
@@ -50,9 +50,14 @@
         <div class="about-us-container">
             <h1>About Boston Tix</h1>
             <p>
-                At Boston Tix, we are passionate about connecting people with unforgettable live experiences. 
-                Whether it’s a sold-out concert, a thrilling sports event, or a heartwarming theater show, 
-                we make it easy to buy, sell, and discover tickets to events happening in and around Boston.
+                At Boston Tix, we believe that every ticket holds the potential 
+                for something extraordinary. Our mission is to create unforgettable 
+                experiences by offering more than just access to events. We 
+                specialize in curated bundles that transform a night out into a 
+                journey filled with discovery, excitement, and connection. From 
+                exclusive meet-and-greets with artists to behind-the-scenes venue 
+                tours and thoughtfully paired dining experiences, Boston Tix is 
+                your gateway to the heart of Boston’s cultural vibrancy.
             </p>
         </div>
     </section>
@@ -62,8 +67,11 @@
         <div class="mission-container">
             <h2>Our Mission</h2>
             <p>
-                To make live entertainment accessible to everyone while fostering a vibrant community of 
-                event-goers. We strive to provide a seamless, secure, and user-friendly platform for our customers.
+                To redefine live entertainment by connecting people with the 
+                essence of Boston’s creativity and community. Through personalized 
+                experiences and curated event bundles, we aim to celebrate the city’s 
+                rich cultural tapestry and create memories that last long after the 
+                show is over.
             </p>
         </div>
     </section>
