--- a/index.html
+++ b/index.html
@@ -19,12 +19,22 @@
     <section class="banner">
         <div class="banner-text">
             <h2>Boston Tix</h2>
-            <p>Buy and resell tickets to local Boston shows</p>
+            <p>Buy tickets and experience bundles to local Boston events</p>
         </div>
     </section>
 
     <!-- Main Content Section -->
     <main>
+        <!-- Experiential Add-ons Blurb -->
+        <section class="experiential-addons">
+            <div class="content">
+                <h2>More Than Tickets</h2>
+                <p>At Boston Tix, we transform events into unforgettable experiences. 
+                    Our exclusive bundles connect you with the heart of Boston through 
+                    pre-show meet-and-greets, behind-the-scenes tours, and curated 
+                    dining options. Discover the magic of Boston with every ticket!</p>
+            </div>
+        </section>
         <!-- Products Section -->
         <section class="products">
             <h2>Popular categories</h2>
