--- a/aboutus.html
+++ b/aboutus.html
@@ -113,7 +113,7 @@
                 Be part of the Boston Tix community and never miss a moment. Sign up to receive updates 
                 on the hottest events, exclusive discounts, and more.
             </p>
-            <a href="signup.html" class="cta-button">Sign Up Now</a>
+            <a href="signin.html" class="cta-button">Sign Up Now</a>
         </div>
     </section>
 
